<resources>
  <string name="app_name">lab02</string>
  <!--login-->
  <string name="login_app">Login App</string>
  <string name="login_msg_username">Username</string>
  <string name="login_msg_password">Password</string>
  <string name="login_msg_log_in">Log in</string>
  <string name="login_msg_use_your_tdtu_email">Use your TDTU email</string>
  <!--home-->
  <string name="home_msg_successfully_message">Successfully logged in, your account is</string>
</resources>
