<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="30dp"
  android:background="#d7f7ec"
  android:orientation="vertical">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:layout_marginBottom="20dp"
    android:fontFamily="cursive"
    android:gravity="center_horizontal"
    android:text="@string/login_app"
    android:textColor="@color/colorAccent"
    android:textSize="50sp" />

  <TextView
    android:id="@+id/tv_subtitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login_msg_use_your_tdtu_email"
    android:textAlignment="center"
    android:textSize="17sp" />

  <EditText
    android:id="@+id/activity_login_edt_username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/large_margin"
    android:padding="@dimen/small_margin"
    android:background="#fbfefd"
    android:hint="@string/login_msg_username"
    android:inputType="text" />

  <EditText
    android:id="@+id/activity_login_edt_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/medium_margin"
    android:padding="@dimen/small_margin"
    android:background="#fbfefd"
    android:hint="@string/login_msg_password"
    android:inputType="textPassword" />


  <Button
    android:id="@+id/activity_login_btn_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/medium_margin"
    android:background="@color/colorAccent"
    android:text="@string/login_msg_log_in"
    android:textColor="@color/colorWhite" />

  <TextView
    android:id="@+id/activity_login_txt_error_message"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:gravity="center_horizontal"
    android:textColor="@color/colorError" />
</LinearLayout>